--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
+
+Flask==3.0.0
+flask-cors==4.0.0
+openai==1.3.0
+PyPDF2==3.0.1
+python-docx==1.1.0
 annotated-types==0.7.0
 anyio==4.11.0
 certifi==2025.11.12
